fixed nav z-index issue

--- a/my-app/src/css/main.css
+++ b/my-app/src/css/main.css
@@ -18,7 +18,7 @@ nav {
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
   overflow: hidden;
-  z-index: 1000;
+  z-index: 3;
 }
 
 nav ul {
@@ -83,6 +83,7 @@ nav.open {
   border-radius: 50%;
   bottom: 20px;
   border: none;
+  z-index: 200;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -114,6 +115,7 @@ nav.open {
           transform: translateY(-50px);
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
+  z-index: 1000;
 }
 
 .menu button.nav-toggle.open .hamburger {
@@ -284,6 +286,10 @@ header .scrolled {
   border-radius: 7px;
   margin-bottom: 2em;
   max-width: 100%;
+}
+
+.menu-section button.accordion-button {
+  z-index: -5;
 }
 
 .menu-item {
