--- a/my-app/src/scss/_order-online.scss
+++ b/my-app/src/scss/_order-online.scss
@@ -15,6 +15,10 @@
     border-radius: 7px;
     margin-bottom: 2em;
     max-width: 100%;
+
+    button.accordion-button {
+        z-index: -5;
+    }
     
 }
 
